--- a/main.css
+++ b/main.css
@@ -4,10 +4,11 @@ body {
   
   .keyboard {
     display: grid;
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     grid-template-columns: repeat(14, 1fr);
   
-    width: 80%;
+    width: 75%;
+    height: 25vh;
     padding: 15px;
     margin: 0 auto;
   
