--- a/main.css
+++ b/main.css
@@ -4,20 +4,21 @@ body {
   
   .keyboard {
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: repeat(14, 1fr);
+    grid-template-columns: repeat(29, 1fr);
+    grid-gap: 2px;
   
     width: 75%;
-    height: 25vh;
+    height: 35vh;
     padding: 15px;
     margin: 0 auto;
   
     background: rgba(156, 153, 153, 0.5);
     border-radius: 15px;
   }
-  
+
   .button {
-    width: 80%;
+    width: 100%;
+    grid-area: span 1/span 2;
     height: 80%;
     margin: 5px;
     box-shadow: 2px 2px 10px -2px black;
@@ -25,7 +26,38 @@ body {
     font-size: 10px;
     text-align: center;
   }
-  
+  .button:nth-child(14) {
+    grid-area: span 1/span 3;
+  }
+
+  .button:nth-child(15) {
+    grid-area: span 1/span 3;
+  }
+
+  .button:nth-child(29) {
+    grid-area: span 1/span 4;
+  }
+
+  .button:nth-child(41) {
+    grid-area: span 1/span 3;
+  }
+
+  .button:nth-child(42) {
+    grid-area: span 1/span 4;
+  }
+
+  .button:nth-child(53) {
+    grid-area: span 1/span 3;
+  }
+
+  .button:nth-child(59) {
+    grid-area: span 1/span 8;
+  }
+
+  .button:nth-child(62) {
+    grid-area: span 1/span 3;
+  }
+
   .button:hover {
     background: yellowgreen;
     border: 0px;
