--- a/main.css
+++ b/main.css
@@ -1,63 +1,34 @@
 body {
     font-family: sans-serif;
   }
-  
   .keyboard {
-    display: grid;
-    grid-template-columns: repeat(29, 1fr);
-    grid-gap: 2px;
-  
     width: 75%;
-    height: 35%;
+    height: 25vh;
     padding: 15px;
     margin: 0 auto;
-  
     background: rgba(156, 153, 153, 0.5);
     border-radius: 15px;
   }
-
-  .button {
+  .keyboard-buttons {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(14, 1fr);
+  
     width: 100%;
-    grid-area: span 1/span 2;
+    height: 85%;
+    margin-top: 5px; 
+  }
+  
+  .button {
+    width: 80%;
     height: 80%;
-    margin: 5px;
+    margin: 0px;
     box-shadow: 2px 2px 10px -2px black;
   
     font-size: 10px;
     text-align: center;
   }
-  .button:nth-child(14) {
-    grid-area: span 1/span 3;
-  }
-
-  .button:nth-child(15) {
-    grid-area: span 1/span 3;
-  }
-
-  .button:nth-child(29) {
-    grid-area: span 1/span 4;
-  }
-
-  .button:nth-child(41) {
-    grid-area: span 1/span 3;
-  }
-
-  .button:nth-child(42) {
-    grid-area: span 1/span 4;
-  }
-
-  .button:nth-child(53) {
-    grid-area: span 1/span 3;
-  }
-
-  .button:nth-child(59) {
-    grid-area: span 1/span 8;
-  }
-
-  .button:nth-child(62) {
-    grid-area: span 1/span 3;
-  }
-
+  
   .button:hover {
     background: yellowgreen;
     border: 0px;
@@ -81,5 +52,70 @@ body {
   
     background: gray;
     color: white;
+  }
+  
+  /* slider checkbox */
+  
+  .slider-checkbox {
+    position: relative;
+    margin-top: 0px;
+  }
+  .slider-checkbox input {
+    margin: 0px;
+    margin-top: 1px;
+    cursor: pointer;
+    opacity: 0;
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    left: 0px;
+    width: 40px;
+    height: 20px;
+  }
+  .slider-checkbox input:checked + .label:before {
+    background-color: #1877c1;
+    content: "eng";
+    padding-left: 5px;
+  }
+  .slider-checkbox input:checked + .label:after {
+    left: 25px;
+  }
+  .slider-checkbox .label {
+    position: relative;
+    padding-left: 46px;
+  }
+  .slider-checkbox .label:before, .slider-checkbox .label:after {
+    position: absolute;
+    border-radius: 10px;
+    transition: background-color 0.3s, left 0.3s;
+  }
+  .slider-checkbox .label:before {
+    content: "rus";
+    color: #fff;
+    box-sizing: border-box;
+    padding-left: 23px;
+    font-size: 12px;
+    line-height: 20px;
+    left: 0px;
+    top: 0px;
+    height: 20px;
+    width: 45px;
+    border-radius: 10px;
+  }
+  .slider-checkbox .label:after {
+    content: "";
+    letter-spacing: 20px;
+    background: #fff;
+    left: 1px;
+    top: 1px;
+    height: 18px;
+    width: 18px;
+  }
+  .slider-checkbox {
+    margin-top: 0px;
+    margin-bottom: 8px;
+  }
+  .slider-checkbox input:not(:checked) + .label[for="checkbox"]:before {
+    background-color: #0a4776;
   }
   
