transform  method focus clicked buttons keyboard

--- a/main.css
+++ b/main.css
@@ -41,6 +41,9 @@ body {
   outline-style: inset;
   animation: flyBorder 0.5s ease-out infinite;
 }
+.button.clicked {
+  background-color: teal;
+}
   
   @keyframes fly {
     20% {
