--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body {
   .keyboard-buttons {
     display: grid;
     grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: repeat(14, 1fr);
+    grid-template-columns: repeat(73, 1fr);
   
     width: 100%;
     height: 85%;
@@ -21,6 +21,7 @@ body {
   }
   
   .button {
+    grid-area: span 1/ span 4;
     width: 80%;
     height: 80%;
     margin: 0px;
